调整项目文件结构